[package]
name = "security-badger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
badge-maker = "0.3.1"
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.32", features = ["derive", "cargo"] }
convert_case = "0.8.0"
enum_dispatch = "0.3.13"
log = { version = "0.4.26", features = ["kv", "kv_std"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
simple_logger = "5.0.0"
strum = "0.27.1"
strum_macros = "0.27.1"
thiserror = "2.0.12"
